@@ -1,0 +1,20 @@
+from plone.app.layout.sitemap.sitemap import SiteMapView
+from Products.CMFCore.utils import getToolByName
+
+class PerSEOSiteMapView (SiteMapView):
+    """Creates the sitemap as explained in the specifications.
+
+    http://www.sitemaps.org/protocol.php
+    """
+
+    def objects(self):
+        """Returns the data to create the sitemap."""
+        
+        catalog = getToolByName(self.context, 'portal_catalog')
+        for item in catalog.searchResults({'Language': 'all'}):
+            yield {
+                'loc': item.getURL(),
+                'lastmod': item.modified.ISO8601(),
+                #'changefreq': 'always', # hourly/daily/weekly/monthly/yearly/never
+                #'prioriy': 0.5, # 0.0 to 1.0
+            }
